Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project 
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      app: project 
  template:
    metadata:
      labels:
        app: project 
    spec:
      serviceAccountName: terminal-sa 
      containers:
      - name: project 
        image: mazen2025/mazen-devops-portfolio:202512f3d82791575347a338b60bf9fc76652839
        ports:
        - containerPort: 3000
