service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: project-service 
  namespace: default  
spec:
  selector:
    app: project  
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000  
    targetPort: 3000
    nodePort: 30000
