terminal-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terminal-server-service
  namespace: default
  labels:
    app: terminal-server
spec:
  selector:
    app: terminal-server
  type: NodePort
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
    nodePort: 30001
